src/objects/Change_Management_Integration_Credential__c.object
<CustomObject>
    <description>This object stores the authentication credentials to the external system.</description>
    <fields>
        <fullName>Authentication_Method__c</fullName>
        <label>Authentication Method</label>
        <picklist>
            <picklistValues>
                <fullName>Basic Authentication</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Authentication Token</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_System__c</fullName>
        <label>External System</label>
        <picklist>
            <picklistValues>
                <fullName>JIRA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>VersionOne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agile Accelerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ScrumDo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targetprocess</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Change Management Integration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>External_System__c</columns>
        <columns>Username__c</columns>
        <columns>Password__c</columns>
        <columns>Authentication_Method__c</columns>
        <columns>Endpoint__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Management Integrations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>